fixed scrollbar width and colours

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -32,7 +32,7 @@ div {
 }
 
 *::-webkit-scrollbar {
-  width: 15px;
+  width: 3px;
 }
 
 *::-webkit-scrollbar-track {
@@ -40,9 +40,9 @@ div {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: black;
+  background-color: #9d9b9b;
   border-radius: 20px;
-  border: 3px solid #c5c5c5
+  border: 3px solid #9d9b9b
 }
 
 @tailwind components;
